new matched skill bar

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<li class="nav-item">
 						<a class="nav-link" href="#contact">Contact</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item nav-item-home">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 				</ul>
@@ -164,6 +164,37 @@
 		</div>
 
 		<!--PROGRESS SKILLS-->
+        <div class="wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="skillbar" data-percent="55%">
+                    <div class="skillbar-title">HTML/HTML5</div>
+                    <div class="skill-bar-percent">55%</div>
+                    <div class="skillbar-bar" style="width: 55%;"></div>
+                </div>
+
+                <div class="skillbar" data-percent="80%">
+                    <div class="skillbar-title">CSS/CSS3</div>
+                    <div class="skill-bar-percent">80%</div>
+                    <div class="skillbar-bar" style="width: 80%;"></div>
+                </div>
+
+                <div class="skillbar" data-percent="40%">
+                    <div class="skillbar-title">JavaScript</div>
+                    <div class="skill-bar-percent">40%</div>
+                    <div class="skillbar-bar" style="width: 40%;"></div>
+                </div>
+
+                <div class="skillbar" data-percent="70%">
+                    <div class="skillbar-title">Python</div>
+                    <div class="skill-bar-percent">70%</div>
+                    <div class="skillbar-bar" style="width: 70%;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 		<!-- <div class="row progress-skills">
 				<div class="col">
 					<div class="progress">
@@ -309,6 +340,7 @@
 							<div class="col-md-6">
 								<div class="form-box">
 									<h1>Get in touch</h1>
+                                    <hr>
 									<div class="social">
 										<ul class="list-inline list-unstyled">
 											<li class="list-inline-item">
@@ -328,6 +360,7 @@
 											</li>
 										</ul>
 									</div>
+                                    <hr>
 									<form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
 										<div class="form-group">
 											<label for="name">Name</label>
