contact fixed no map

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 
 		<!--CONTENT-->
 		<div class="container" id="content">
+
+        <!--TYPEWRITER-->
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="typewriter" id="landing-content">
+						<h1>I'm a full stack developer now.</h1>
+					</div>
+				</div>
+			</div>
+		
 			<div class="row cards-content">
 
 				<!-- Card deck -->
@@ -74,20 +84,19 @@
 						<!--Card content-->
 						<div class="card-body landing-content">
 							<!--Title-->
-							<h4 class="card-title">FULL STACK DEVELOPER <br>with passion for
-								<br>AGILE and SAFe</h4><br>
-								<!--Text-->
+							<h4 class="card-title">I am a challenger with various experiences.</h4><br>
+							<!--Text-->
 
-								<p class="card-text"> I am a challenger with various experiences.<br><br>Before being bitten by the programming bug I had been
+							<p class="card-text"> Before being bitten by the programming bug I had been
 										working within IT with requirements developing one of charts, maps & flight
-										planners in distributed awesome team for an large aviation company. Click:
-									<a href="https://ww2.jeppesen.com/" target="_blank"><i class="fas fa-plane"></i></a>
-									<br><br>Experience in Human Resources gave me wide business perspective on how valuable is to get not only highly skilled but also suitably matched employees for an organization.
-									<a href="https://cpljobs.com/pl/?lang=en"
-										target="_blank"><i class="fas fa-user-friends"></i></a><br><br>
-                                            Working in TV News Media was an awesome experience. I thrived coordinating TV crews as well as verifying and passing huge amount of information under high time pressure. I believe effective communication is a key success to every project. Click:
-									<a href="https://tvn24.pl/" target="_blank"><i class="fas fa-tv"></i></a>
-								</p>
+										planners in distributed awesome team for an large aviation company. Click:<a href="https://ww2.jeppesen.com/"
+									target="_blank"><i class="fas fa-plane"></i></a>
+								<br><br>Experience in Human Resources gave me wide business perspective on how valuable is to get not only highly skilled but also suitably matched employees for an organization.<a
+									href="https://cpljobs.com/pl/?lang=en"
+									target="_blank"><i class="fas fa-user-friends"></i></a><br><br>
+                                            Working in TV News Media was an exciting experience. I thrived coordinating TV crews as well as verifying and passing huge amount of information under time pressure. I believe effective communication is a key success to every project. Click:
+								<a href="https://tvn24.pl/" target="_blank"><i class="fas fa-tv"></i></a>
+							</p>
 						</div>
 					</div>
 					<!-- /Card 2-->
@@ -163,78 +172,38 @@
 			<!-- /Card deck -->
 		</div>
 
-		<!--PROGRESS SKILLS-->
-        <div class="wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="skillbar" data-percent="55%">
-                    <div class="skillbar-title">HTML/HTML5</div>
-                    <div class="skill-bar-percent">55%</div>
-                    <div class="skillbar-bar" style="width: 55%;"></div>
-                </div>
+		<!--PROGRESS SKILLS TECH-->
+		<div class="wrapper">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="skillbar" data-percent="55%">
+							<div class="skillbar-title">HTML/HTML5</div>
+							<div class="skill-bar-percent">55%</div>
+							<div class="skillbar-bar" style="width: 55%;"></div>
+						</div>
 
-                <div class="skillbar" data-percent="80%">
-                    <div class="skillbar-title">CSS/CSS3</div>
-                    <div class="skill-bar-percent">80%</div>
-                    <div class="skillbar-bar" style="width: 80%;"></div>
-                </div>
+						<div class="skillbar" data-percent="80%">
+							<div class="skillbar-title">CSS/CSS3</div>
+							<div class="skill-bar-percent">80%</div>
+							<div class="skillbar-bar" style="width: 80%;"></div>
+						</div>
 
-                <div class="skillbar" data-percent="40%">
-                    <div class="skillbar-title">JavaScript</div>
-                    <div class="skill-bar-percent">40%</div>
-                    <div class="skillbar-bar" style="width: 40%;"></div>
-                </div>
+						<div class="skillbar" data-percent="40%">
+							<div class="skillbar-title">JavaScript</div>
+							<div class="skill-bar-percent">40%</div>
+							<div class="skillbar-bar" style="width: 40%;"></div>
+						</div>
 
-                <div class="skillbar" data-percent="70%">
-                    <div class="skillbar-title">Python</div>
-                    <div class="skill-bar-percent">70%</div>
-                    <div class="skillbar-bar" style="width: 70%;"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-		<!-- <div class="row progress-skills">
-				<div class="col">
-					<div class="progress">
-						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-							aria-valuemin="0" aria-valuemax="100" style="width:50%">
-							50% Complete
+						<div class="skillbar" data-percent="70%">
+							<div class="skillbar-title">Python</div>
+							<div class="skill-bar-percent">70%</div>
+							<div class="skillbar-bar" style="width: 70%;"></div>
 						</div>
-						<span class="progress-type">HTML/HTML5</span>
-					</div>
-					<div class="progress">
-						<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50"
-							aria-valuemin="0" aria-valuemax="100" style="width:40%">
-							40% Complete
-						</div>
-						<span class="progress-type">CSS/CSS3</span>
-					</div>
-					<div class="progress">
-						<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
-							aria-valuemin="0" aria-valuemax="100" style="width:10%">
-							10%
-						</div>
-						<span class="progress-type">JS/TypeScript</span>
-					</div>
-					<div class="progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
-							aria-valuemin="0" aria-valuemax="100" style="width:5%">
-							5%
-						</div>
-						<span class="progress-type">Python/Django</span>
-					</div>
-					<div class="progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70"
-							aria-valuemin="0" aria-valuemax="100" style="width:20%">
-							20% Complete
-						</div>
-						<span class="progress-type">SQL</span>
 					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
 
 		<!--AGILE PAGE-->
 		<div class="container" id="agile">
@@ -256,15 +225,11 @@
 								<!--Title-->
 								<h4 class="card-title">SCRUM & KANBAN</h4>
 								<!--Text-->
-								<p class="card-text">I am creative.<br>
-									<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically.<br>I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:
-
-									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-									<!--<button type="button" class="btn btn-outline-secondary">Read more</button>-->
-								</p>
-								<div><a href="https://www.scrum.org/" class="btn btn-outline-secondary"
-										target="_blank">Official
-										website</a></div>
+								<p class="card-text">SCRUM MASTER
+									<br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?</p>
+									<div><a href="https://www.scrum.org/" class="btn btn-outline-secondary"
+											target="_blank">Official website</a>
+									</div>
 							</div>
 						</div>
 					</div>
@@ -278,18 +243,46 @@
 								<!--Title-->
 								<h4 class="card-title">SAFe</h4>
 								<!--Text-->
-								<p class="card-text">I am persistent.<br>
-									<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio:</p>
+								<p class="card-text">proxy PRODUCT OWNER
+									<br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?</p>
 									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
 									<div><a href="https://www.scaledagileframework.com/"
-											class="btn btn-outline-secondary" target="_blank">Official website</a></div>
-
+											class="btn btn-outline-secondary" target="_blank">Official website</a>
+									</div>
 							</div>
 						</div>
 					</div>
 					<!-- /Card -->
 				</div>
 				<!-- /Card deck -->
+			</div>
+
+			<!-- SKILL BAR AGILE -->
+			<div class="wrapper">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="skillbar" data-percent="80%">
+								<div class="skillbar-title">SCRUM</div>
+								<div class="skill-bar-percent">80%</div>
+								<div class="skillbar-bar" style="width: 80%;"></div>
+							</div>
+
+							<div class="skillbar" data-percent="80%">
+								<div class="skillbar-title">KANBAN</div>
+								<div class="skill-bar-percent">80%</div>
+								<div class="skillbar-bar" style="width: 80%;"></div>
+							</div>
+
+							<div class="skillbar" data-percent="70%">
+								<div class="skillbar-title">SAFe</div>
+								<div class="skill-bar-percent">70%</div>
+								<div class="skillbar-bar" style="width: 70%;"></div>
+							</div>
+
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<!--CONTACT PAGE-->
@@ -302,27 +295,23 @@
 				</div>
 
 				<!--CONTACT FORM-->
-
-
-
-
 				<section class="contact" id="contact">
 					<div class="container">
 						<div class="row">
 							<!-- <div class="col-sm-12">
 							</div> -->
-							<div class="col-md-6">
-								<div class="address list-styled">
-									<h5><i class="fas fa-map-pin"></i> Address</h5>
-									<ul class="list-unstyled">
-										<li> Pargasgatan 34</li>
-										<li> 16471 Stockholm</li>
-									</ul>
-								</div>
-								<div class="email list-styled">
+							<!-- <div class="col-md-6"> -->
+
+							<!--GOOGLE MAP-->
+							<!-- <div style="width: 500px"><iframe width="500" height="300"
+										src="https://maps.google.com/maps?width=500&amp;height=300&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
+										frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a
+											href="https://www.maps.ie/coordinates.html">find my coordinates</a></iframe>
+								</div><br/> -->
+							<!-- <div class="email list-styled">
 									<h5><i class="fas fa-at"></i> Email</h5>
 									<ul class="list-unstyled">
-										<li> anna.jan.jansson@gmail.com</li>
+										<li>anna.janiak@yahoo.pl</li>
 									</ul>
 								</div>
 								<div class="phone list-styled">
@@ -331,16 +320,12 @@
 										<li> +46 793360854</li>
 									</ul>
 								</div>
-							</div>
+							</div> -->
 
-
-
-
-
-							<div class="col-md-6">
+							<div class="col-md-8">
 								<div class="form-box">
 									<h1>Get in touch</h1>
-                                    <hr>
+									<hr>
 									<div class="social">
 										<ul class="list-inline list-unstyled">
 											<li class="list-inline-item">
@@ -360,7 +345,7 @@
 											</li>
 										</ul>
 									</div>
-                                    <hr>
+									<hr>
 									<form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
 										<div class="form-group">
 											<label for="name">Name</label>
